// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Menu Menu with avatar and different button colour 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-6mpaj4-Menu"
        >
          <button
            className="css-8yaow6-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-1kner5m-Button"
              >
                <div
                  className="css-t06fj3-Avatar"
                >
                  
                  TC
                </div>
              </span>
              <span
                className="css-1qy2jjj-Button"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="css-1kner5m-Button"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-14m0jd5-Icon"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-6mpaj4-Menu"
        >
          <button
            className="css-8yaow6-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-1kner5m-Button"
              >
                <div
                  className="css-t06fj3-Avatar"
                >
                  <img
                    src="https://material-ui.com/static/images/avatar/1.jpg"
                  />
                </div>
              </span>
              <span
                className="css-1qy2jjj-Button"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="css-1kner5m-Button"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-14m0jd5-Icon"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-6mpaj4-Menu"
        >
          <button
            className="css-8yaow6-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-1kner5m-Button"
              >
                <div
                  className="css-t06fj3-Avatar"
                >
                  
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-xcq3z3-Icon"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="css-1qy2jjj-Button"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="css-1kner5m-Button"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-14m0jd5-Icon"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with option icon and different colour 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-6mpaj4-Menu"
        >
          <button
            className="css-8yaow6-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-1kner5m-Button"
              >
                <div
                  className="css-t06fj3-Avatar"
                >
                  
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-xcq3z3-Icon"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="css-1qy2jjj-Button"
              >
                <span>
                  More
                </span>
              </span>
              <span
                className="css-1kner5m-Button"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-14m0jd5-Icon"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-6mpaj4-Menu"
        >
          <button
            className="css-1jy791a-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-1kner5m-Button"
              >
                <div
                  className="css-t06fj3-Avatar"
                >
                  
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-xcq3z3-Icon"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="css-1qy2jjj-Button"
              >
                <span>
                  More
                </span>
              </span>
              <span
                className="css-1kner5m-Button"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-6mpaj4-Menu"
        >
          <button
            className="css-18cl9mj-Button"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="css-1xr6sam-Button"
            >
              <span
                className="css-1kner5m-Button"
              >
                <div
                  className="css-t06fj3-Avatar"
                >
                  
                  <span
                    className="css-1gnbc76-Icon"
                  >
                    <span
                      className="css-xcq3z3-Icon"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="css-1qy2jjj-Button"
              >
                <span>
                  More
                </span>
              </span>
              <span
                className="css-1kner5m-Button"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1ej672q-Icon"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with selection handler 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div>
      Selected: 
      <b>
        -
      </b>
    </div>
    <div
      role="button"
    >
      <div
        className="css-6mpaj4-Menu"
      >
        <button
          className="css-199vak6-Button"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="css-1xr6sam-Button"
          >
            <span
              className="css-l730ys-Button"
            >
              <span>
                More
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
